# gpt-oss-cpp

./: .gitignore  CMakeLists.txt  README.md
includes/: checkpoint.h  kernels.h  kv_cache.h  model.h  tokenizer.h  util.h
pyt/: README.md  generate.py  model.py  random_test.py  requirements.txt  utils.py
src/: checkpoint.cpp  kernels.cpp  kv_cache.cpp  main.cpp  model.cpp  tokenizer.cpp  transformer.cpp  utils.cpp
tests/: checkpoint_test.cpp
